Added better stats
